# clawguard

./: .gitignore  LICENSE  README.md  clawguard.py  pyproject.toml
.github/workflows/: ci.yml
examples/: clean_input.txt  ghost_exploit.txt  malicious_input.txt  obfuscated_attack.txt
src/clawguard_core/: __init__.py  _engine.py
src/clawguard_core.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_formatters.py  test_patterns.py  test_scanner.py
